# dns-sd

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: release-builds.yml
src/: main.rs
